# hands_dirty_deep_learning_curriculum

./: .gitignore  README.md
prereq/: main.py  mnist_torch.ipynb  pyproject.toml
transformers/: 1-Transformers.md  batched_transformers.ipynb  pyproject.toml  shakespeare-transformer.ipynb  transformer.ipynb  transformers.ipynb
