[project]
name = "transformers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "einops>=0.8.1",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
